--- a/Untitled24.ipynb
+++ b/Untitled24.ipynb
@@ -34,7 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "# Transliteration system\n",
+        "# Transliteration system ___ new\n",
         "\n"
       ]
     }
